{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 50,
  "lineage": "5fabd55d-1387-4ef1-e1e1-5eef261a276f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_tf04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9ec365374bb782e",
            "arn": "arn:aws:ec2:us-east-1:841442893578:instance/i-0ede549c8ec797084",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ede549c8ec797084",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f0f5694eb9f0c6c",
            "private_dns": "ip-172-31-82-135.ec2.internal",
            "private_ip": "172.31.82.135",
            "public_dns": "ec2-52-2-162-81.compute-1.amazonaws.com",
            "public_ip": "52.2.162.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:841442893578:key/a064e120-1d0c-4856-8473-81da3d3d3fb8",
                "throughput": 0,
                "volume_id": "vol-0ac1c2a85790946a7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4ae8f064",
            "tags": {
              "Name": "AWSLab"
            },
            "tags_all": {
              "Name": "AWSLab"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-28bb4100"
            ]
          },
          "dependencies": [
            "data.aws_ami.tf_aws_ami"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f50a66626759378",
            "association_id": "eipassoc-00ea1fe6ce4db0605",
            "domain": "vpc",
            "id": "eipalloc-08f50a66626759378",
            "network_border_group": "us-east-1",
            "network_interface": "eni-048e3a4ee08ac0de3",
            "private_dns": "ip-10-0-101-97.ec2.internal",
            "private_ip": "10.0.101.97",
            "public_dns": "ec2-18-210-247-234.compute-1.amazonaws.com",
            "public_ip": "18.210.247.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "kalyan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "kalyan"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:internet-gateway/igw-06b1c1ccd811c477d",
            "id": "igw-06b1c1ccd811c477d",
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "kalyan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "kalyan"
            },
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f50a66626759378",
            "connectivity_type": "public",
            "id": "nat-0d7a5da88cc35cc16",
            "network_interface_id": "eni-048e3a4ee08ac0de3",
            "private_ip": "10.0.101.97",
            "public_ip": "18.210.247.234",
            "subnet_id": "subnet-088a0f8330aa1d93d",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "kalyan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "kalyan"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d57a129832f97ac91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d7a5da88cc35cc16",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d57a129832f97ac9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b1c1ccd811c477d",
            "id": "r-rtb-0313cea4521a7b0a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0313cea4521a7b0a9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:route-table/rtb-0428c92b458f1c4c3",
            "id": "rtb-0428c92b458f1c4c3",
            "owner_id": "841442893578",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-db",
              "Owner": "kalyan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-db",
              "Owner": "kalyan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:route-table/rtb-0d57a129832f97ac9",
            "id": "rtb-0d57a129832f97ac9",
            "owner_id": "841442893578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7a5da88cc35cc16",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private",
              "Owner": "kalyan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private",
              "Owner": "kalyan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:route-table/rtb-0313cea4521a7b0a9",
            "id": "rtb-0313cea4521a7b0a9",
            "owner_id": "841442893578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b1c1ccd811c477d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "kalyan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "kalyan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd2f443eaf49b3d8",
            "route_table_id": "rtb-0428c92b458f1c4c3",
            "subnet_id": "subnet-026a602fe0dffd77e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069fc6ca0f9fed91f",
            "route_table_id": "rtb-0428c92b458f1c4c3",
            "subnet_id": "subnet-092d6a3eb5d55cb63"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f64602964453ca",
            "route_table_id": "rtb-0d57a129832f97ac9",
            "subnet_id": "subnet-0ae5ada53bf8c160e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036c421c3a023c7cf",
            "route_table_id": "rtb-0d57a129832f97ac9",
            "subnet_id": "subnet-056f780ed22103605"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049ea50cd800ae0f7",
            "route_table_id": "rtb-0313cea4521a7b0a9",
            "subnet_id": "subnet-088a0f8330aa1d93d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087f750208df90bca",
            "route_table_id": "rtb-0313cea4521a7b0a9",
            "subnet_id": "subnet-0fef45796e8a9f44d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:subnet/subnet-026a602fe0dffd77e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "id": "subnet-026a602fe0dffd77e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1a",
              "Owner": "kalyan",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1a",
              "Owner": "kalyan",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:subnet/subnet-092d6a3eb5d55cb63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "id": "subnet-092d6a3eb5d55cb63",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1b",
              "Owner": "kalyan",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1b",
              "Owner": "kalyan",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:subnet/subnet-0ae5ada53bf8c160e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ae5ada53bf8c160e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1a",
              "Owner": "kalyan",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1a",
              "Owner": "kalyan",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:subnet/subnet-056f780ed22103605",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-056f780ed22103605",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1b",
              "Owner": "kalyan",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1b",
              "Owner": "kalyan",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:subnet/subnet-088a0f8330aa1d93d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-088a0f8330aa1d93d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1a",
              "Owner": "kalyan",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1a",
              "Owner": "kalyan",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:subnet/subnet-0fef45796e8a9f44d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0fef45796e8a9f44d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1b",
              "Owner": "kalyan",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1b",
              "Owner": "kalyan",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0dcfc0c47a6e91fe4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841442893578:vpc/vpc-0dcfc0c47a6e91fe4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09dc22f1b55cb3766",
            "default_route_table_id": "rtb-082353549abc24e7f",
            "default_security_group_id": "sg-06171847cb559bbb3",
            "dhcp_options_id": "dopt-2762a95d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dcfc0c47a6e91fe4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-082353549abc24e7f",
            "owner_id": "841442893578",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "kalyan"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "kalyan"
            }
          }
        }
      ]
    }
  ]
}